Fixed home footer alignment and padding

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,11 +1,19 @@
 
+
 footer {
+    position: absolute;
+    align-items: center;
+    bottom: 0;
+    width: 100%;
     display: flex;
     justify-content: space-between;
-    height: 40px;
-    padding: 8px 8px;
-    margin-top: 20px;
+    padding: 16px;
     border-radius: 8px 8px 0 0;
     background-color: var(--black);
     color: var(--white);
+    z-index: 500;
+}
+
+footer p {
+    margin: 0;
 }
